# torch-ttt

./: .buildinfo  .gitignore  CITATION.cff  CNAME  README.md  pyproject.toml  searchindex.js  sg_execution_times.html
.github/workflows/: deploy-docs.yml  run-tests.yml  update_docs_citations.yml
_autosummary/: torch_ttt.engine.ttt_engine.TTTEngine.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: 01_mnist_TTT.rst.txt  sg_execution_times.rst.txt
auto_examples/: 01_mnist_TTT.html  sg_execution_times.html
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  references.bib  tutorials.rst
docs/_static/css/: custom.css
docs/_templates/: class.rst  gallery_footer.html  layout.html
docs/scripts/: generate_papers_table.py  push_examples.sh  ttt_citations_graph.py  ttt_papers.yaml  update_papers.py
docs/scripts/data/: papers.yaml  papers_table.html  papers_with_citations.yaml
examples/: 01_mnist_TTT.py  02_cifar_TTTPP.py  GALLERY_HEADER.rst  test.py
tests/: test_imports.py
tests/engines/: test_actmad_engine.py  test_deyo_engine.py  test_eata_engine.py  test_it3_engine.py  test_masked_ttt_engine.py  test_memo_engine.py  test_tent_engine.py  test_ttt_engine.py  test_ttt_pp_engine.py
torch_ttt/: engine_registry.py  loss_registry.py  ttt_runner.py
torch_ttt/core/: engine_registry.py  loss_registry.py  ttt_runner.py
torch_ttt/core/engine/: base_engine.py  ttt_engine.py
torch_ttt/core/losses/: base_loss.py  entropy_loss.py  mean_loss.py  ttt_loss.py  weights_magnitude_loss.py  zerot_loss.py
torch_ttt/engine/: __init__.py  actmad_engine.py  base_engine.py  deyo_engine.py  eata_engine.py  masked_ttt_engine.py  memo_engine.py  mimo_engine.py  tent_engine.py  ttt_engine.py  ttt_pp_engine.py
torch_ttt/loss/: __init__.py  base_loss.py  contrastive_loss.py  entropy_loss.py  mean_loss.py  ttt_loss.py  weights_magnitude_loss.py  zerot_loss.py
torch_ttt/utils/: augmentations.py  math.py
