[project.optional-dependencies]

docs = [
    sphinxawesome-theme==6.0.0b1
]

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    "build",         # Ignore the 'build' directory
    "dist",          # Ignore the 'dist' directory
    "__pycache__",   # Ignore Python's cache directories
    "notebooks"
]

[tool.ruff.lint.pydocstyle]
convention = "google"