[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-ttt"
version = "0.0.1"

[project.optional-dependencies]

dev = [
    "pytest-cov",
]

docs = [
    "sphinxawesome-theme==6.0.0b1",
    "sphinx-gallery==0.18.0",
    "sphinxcontrib-bibtex"
]

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    "build",         # Ignore the 'build' directory
    "dist",          # Ignore the 'dist' directory
    "__pycache__",   # Ignore Python's cache directories
    "notebooks"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
source = ["torch_ttt"]
omit = ["*/tests/*"]