[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-ttt"
version = "0.0.1"
description = "Test-Time Training / Adaptation engine collection for PyTorch."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Nikita Durasov", email = "yassnda@gmail.com"}]
requires-python = ">=3.10"

[project.optional-dependencies]

dev = [
    "pytest-cov",
]

docs = [
    "sphinxawesome-theme==6.0.0b1",
    "sphinx-gallery==0.18.0",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-googleanalytics",
    "matplotlib",
    "tqdm"
]

all = [
    "pytest-cov",
    "sphinxawesome-theme==6.0.0b1",
    "sphinx-gallery==0.18.0",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-googleanalytics",
    "matplotlib",
    "tqdm",
    "einops"
]

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    "build",         # Ignore the 'build' directory
    "dist",          # Ignore the 'dist' directory
    "__pycache__",   # Ignore Python's cache directories
    "notebooks"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_ttt*"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
branch = true
source = ["torch_ttt"]
omit = ["*/tests/*"]